# api/school/v1/file_router.pb.go
@@ -11,10 +11,12 @@ import (
 	"go.uber.org/zap"
 
 	"github.com/go-dev-frame/sponge/pkg/errcode"
+	"github.com/go-dev-frame/sponge/pkg/gin/middleware"
 )
 
 type FileLogicer interface {
 	CreateFile(ctx context.Context, req *UploadFileRequest) (*UploadFileResponse, error)
+	DownloadFile(ctx context.Context, req *DownloadFileRequest) (*DownloadFileResponse, error)
 }
 
 type FileOption func(*fileOptions)
@@ -117,6 +119,7 @@ type fileRouter struct {
 
 func (r *fileRouter) register() {
 	r.iRouter.Handle("POST", "/api/v1/files", r.withMiddleware("POST", "/api/v1/files", r.CreateFile_0)...)
+	r.iRouter.Handle("POST", "/api/v1/files/:fileId", r.withMiddleware("POST", "/api/v1/files/:fileId", r.DownloadFile_0)...)
 
 }
 
@@ -153,6 +156,36 @@ func (r *fileRouter) CreateFile_0(c *gin.Context) {
 	var ctx context.Context = c
 
 	out, err := r.iLogic.CreateFile(ctx, req)
+	if err != nil {
+		if errors.Is(err, errcode.SkipResponse) {
+			return
+		}
+		r.iResponse.Error(c, err)
+		return
+	}
+
+	r.iResponse.Success(c, out)
+}
+
+func (r *fileRouter) DownloadFile_0(c *gin.Context) {
+	req := &DownloadFileRequest{}
+	var err error
+
+	if err = c.ShouldBindUri(req); err != nil {
+		r.zapLog.Warn("ShouldBindUri error", zap.Error(err), middleware.GCtxRequestIDField(c))
+		r.iResponse.ParamError(c, err)
+		return
+	}
+
+	if err = c.ShouldBindJSON(req); err != nil {
+		r.zapLog.Warn("ShouldBindJSON error", zap.Error(err), middleware.GCtxRequestIDField(c))
+		r.iResponse.ParamError(c, err)
+		return
+	}
+
+	var ctx context.Context = c
+
+	out, err := r.iLogic.DownloadFile(ctx, req)
 	if err != nil {
 		if errors.Is(err, errcode.SkipResponse) {
 			return
