# internal/routers/file_router.go
@@ -54,4 +54,5 @@ func fileMiddlewares(c *middlewareConfig) {
 
 	// set up single route middleware, just uncomment the code and fill in the middlewares, nothing else needs to be changed
 	//c.setSinglePath("POST", "/api/v1/files", middleware.Auth())    // CreateFile ......
+	//c.setSinglePath("POST", "/api/v1/files/:fileId", middleware.Auth())    // DownloadFile ......
 }
